--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "eslint.enable": false,
   "telemetry.enableTelemetry": false,
-  "telemetry.enableCrashReporter": false
+  "telemetry.enableCrashReporter": false,
+  "tslint.configFile": "tslint.json",
+  "prettier.tslintIntegration": true
 }
