--- a/package.json
+++ b/package.json
@@ -6,16 +6,35 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tslint": "node_modules/.bin/tslint -p .",
-    "compile": "node_modules/.bin/tsc"
+    "compile": "node_modules/.bin/tsc",
+    "app": "node dist | node_modules/.bin/pino-pretty"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/protobufjs": "^6.0.0",
+    "pino": "^5.11.1",
+    "protobufjs": "^6.8.8",
+    "rxjs": "^6.4.0",
+    "ts-nats": "^1.1.2"
+  },
   "devDependencies": {
     "@types/eslint": "^4.16.6",
+    "@types/grunt": "^0.4.24",
     "@types/node": "^11.9.4",
+    "@types/pino": "^5.8.5",
+    "@types/prettier": "^1.16.1",
     "@types/typescript": "^2.0.0",
     "eslint": "^5.14.1",
+    "grunt": "^1.0.3",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-exec": "^3.0.0",
+    "grunt-ts": "^6.0.0-beta.22",
+    "npx": "^10.2.0",
+    "pino-pretty": "^2.5.0",
+    "prettier": "^1.16.4",
+    "prettier-tslint": "^0.4.2",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
