--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/knex": "^0.15.2",
+    "@types/pg": "^7.4.13",
     "@types/protobufjs": "^6.0.0",
+    "@types/uuid": "^3.4.4",
+    "knex": "^0.16.3",
+    "objection": "^1.6.2",
+    "pg": "^7.8.1",
     "pino": "^5.11.1",
     "protobufjs": "^6.8.8",
     "rxjs": "^6.4.0",
-    "ts-nats": "^1.1.2"
+    "ts-nats": "^1.1.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/eslint": "^4.16.6",
